# mission42-timesheet

./: .dockerignore  .env.example  .gitignore  API_KEY_VS_OAUTH.md  AUTH_GUIDE.md  DATABASE_SCHEMA.md  Dockerfile  HTML_DATA_ACCESS.md  MASTER_PLAN.md  QUICKSTART.md  README.md  SETTINGS_DOCUMENTATION.md  SETUP_COMPLETE.md  SIMPLE_TIMESHEET_VIEW.md  SYSTEM_READY.md  USER_FRIENDLY_ENDPOINTS.md  VIEWER_INSTRUCTIONS.md  crontab.example  data_viewer.html  docker-compose.yml  login.html  nginx.conf  pyproject.toml  viewer.html
.claude/: settings.json
app/: config.py  main.py  pocketbase_client.py
docs/: ADMIN_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  OAUTH_GUIDE.md  SPECIFICATION.md
pb_migrations/: 1704673200_create_settings.js  1704673201_create_raw_events.js  1704673202_create_time_blocks.js  1704673204_create_claude_time_tracking.js  1704673205_create_email_accounts.js  1704673208_create_project_specs.js
scripts/: add_collection_fields.py  add_minimal_settings.py  backup.sh  check_google_credentials.sh  create_all_collections.sh  create_collections.py  create_settings_simple.sh  deploy.sh  download_pocketbase.sh  maintain_db.sh  recreate_settings_collection.py  seed_project_specs.py  seed_settings.py  seed_work_packages.py  setup_collections_api.py  setup_readonly_access.py  show_tables.sh  update_collection_rules.py  update_google_credentials.sh  verify_system.py
systemd/: mission42-api.service  pocketbase.service
tests/: test_calendar_fetcher.py  test_github_fetcher.py  test_gmail_fetcher.py  test_oauth.py  test_priority.py  test_scheduler.py  test_settings.py  (+4 more)
(+21 files in other folders)
